Fixed image alignment

--- a/src/scss/AboutPageComponent.scss
+++ b/src/scss/AboutPageComponent.scss
@@ -1,7 +1,3 @@
-img {
-    margin-top: 6rem;
-  }
-
 .text {
     margin-left: 3rem;
 }
@@ -15,7 +11,10 @@ p {
   font-size: 1.25rem;
 }
 
-.text-link {
-  margin: 0;
-  margin-left: 0.3rem;
+@media screen and (min-width: 576px) {
+  .text-link {
+    font-size: 1.25rem;
+    margin: 0;
+    margin-left: 0.3rem;
+  }
 }
