--- a/src/scss/HomepageComponent.scss
+++ b/src/scss/HomepageComponent.scss
@@ -34,7 +34,7 @@
 
     .text-link {
       font-size: 1.5rem;
-      margin: 0;
+      margin-left: 0.3rem;
     }
 
     .social-media {
